# tech

./: .env.example  .gitignore  CLAUDE.md  HYDE_USAGE.md  PERFORMANCE_OPTIMIZATION.md  README.md  TEST_RESULTS.md  app.py  database.py  pyproject.toml  requirements.txt  test_docstring_extraction.py
code_plan_agent/: __init__.py  agent.py  prompts.py  tools.py
codebase/: __init__.py  config.py  database.py  indexer.py  models.py  supabase_database.py
codebase/core/: __init__.py  docstring_generator.py  embeddings.py  parser.py  pg_vector_store.py  preprocessor.py  relationship_extractor.py  relationship_store.py  vector_store.py
codebase/retrieval/: __init__.py  context.py  hyde.py  prompts.py  relevance_judge.py  reranker.py  search.py
codebase/sources/: __init__.py  github.py  local.py  zip_handler.py
models/: __init__.py  code_plan_models.py  codebase_models.py
routers/: __init__.py  code_plan_router.py  codebase_router.py
tests/: test_parser_encoding.py
translation_agent/: __init__.py  agent.py  tools.py
